infra/aks/simple-web/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web
  labels:
    app: simple-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-web
  template:
    metadata:
      labels:
        app: simple-web
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: simple-web
          image: devopslearningacr01.azurecr.io/simple-web:PLACEHOLDER
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: app-secret
              mountPath: /etc/app-secrets
              readOnly: true
      volumes:
        - name: app-secret
          secret:
            secretName: simple-web-config
